SalesforceProject2/src/objects/diz_custom_object__c.object
<CustomObject>
    <description>diz object</description>
    <fields>
        <fullName>diz_checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>diz_checkbox1__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>diz_checkbox2__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_checkboxXXX__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_date2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_date2__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_datetime__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_datetime__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>diz_email2__c</fullName>
        <description>test</description>
        <inlineHelpText>test XXX</inlineHelpText>
        <label>diz_email2__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <inlineHelpText>test XXX</inlineHelpText>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_formula__c</fullName>
        <formula>3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>diz_formula__c</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_multipicklist__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_multipicklist__c</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>234</fullName>
                </value>
                <value>
                    <fullName>dfsd</fullName>
                </value>
                <value>
                    <fullName>435</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_number2__c</fullName>
        <externalId>true</externalId>
        <label>diz_number2__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_number3__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number3__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_percent__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_percent__c</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_phone3__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone3__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phoneXXX__c</fullName>
        <label>diz_phoneXXX__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone_X__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone_X__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_picklist2__c</fullName>
        <description>test</description>
        <label>diz_picklist2__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>cvb</fullName>
                </value>
                <value>
                    <fullName>xxc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist3_c__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist3__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist4__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist4__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklistXX__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklistXX__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asd</fullName>
                    <default>true</default>
                    <label>asd</label>
                </value>
                <value>
                    <fullName>gfdfgd</fullName>
                </value>
                <value>
                    <fullName>tr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklistXXa__c</fullName>
        <label>diz_picklistXXa__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>xczxz</fullName>
                    <default>true</default>
                    <label>xczxz</label>
                </value>
                <value>
                    <fullName>asdasdf</fullName>
                </value>
                <value>
                    <fullName>fghgfh</fullName>
                </value>
                <value>
                    <fullName>dfgdfg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aaa</fullName>
                    <default>true</default>
                    <label>aaa</label>
                </value>
                <value>
                    <fullName>abv</fullName>
                </value>
                <value>
                    <fullName>dsf</fullName>
                </value>
                <value>
                    <fullName>xcv</fullName>
                </value>
                <value>
                    <fullName>123</fullName>
                    <isActive>false</isActive>
                    <label>123</label>
                </value>
                <value>
                    <fullName>XXC</fullName>
                    <isActive>false</isActive>
                    <label>XXC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist_multiselect__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist_multiselect__c</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asd</fullName>
                    <default>true</default>
                    <label>asd</label>
                </value>
                <value>
                    <fullName>cvb</fullName>
                </value>
                <value>
                    <fullName>vbn</fullName>
                </value>
                <value>
                    <fullName>ghh</fullName>
                </value>
                <value>
                    <fullName>sdf</fullName>
                </value>
                <value>
                    <fullName>ghg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_text2__c</fullName>
        <label>diz_text2__c</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>text23</description>
        <inlineHelpText>text23</inlineHelpText>
        <label>diz_text__c</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_url2__c</fullName>
        <description>test</description>
        <inlineHelpText>tset</inlineHelpText>
        <label>diz_url2__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>diz_url3__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_url3__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <label>diz_custom_object</label>
    <nameField>
        <label>diz_custom_object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>diz_custom_object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>diz_vr</fullName>
        <active>true</active>
        <description>test for TWS</description>
        <errorConditionFormula>OR (
YEAR( diz_date__c ) &lt;&gt; YEAR ( TODAY() ),
MONTH( diz_date__c ) &lt; MONTH ( TODAY() )
)</errorConditionFormula>
        <errorMessage>Test error 2</errorMessage>
    </validationRules>
</CustomObject>